Fixed all spacing and animation issues in homepage.

--- a/frontend/src/components/Testimonial/Testimonial.scss
+++ b/frontend/src/components/Testimonial/Testimonial.scss
@@ -17,9 +17,12 @@
     height: auto;
   }
 
+  @media screen and (max-width: 1300px) {
+    gap: 1.5rem;
+  }
+
   @media screen and (max-width: 1200px) {
     min-width: 60%;
-    gap: 1.5rem;
   }
 
   @media screen and (max-width: 768px) {
@@ -38,7 +41,7 @@
     align-items: start;
     gap: 2rem;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1300px) {
       gap: 1rem;
     }
 
@@ -48,6 +51,10 @@
       line-height: 120%;
       font-weight: 700;
       color: var(--black-color-text-secondary);
+
+      @media screen and (max-width: 1300px) {
+        font-size: 1.8rem;
+      }
 
       @media screen and (max-width: 768px) {
         font-size: 1.6rem;
@@ -61,6 +68,10 @@
       font-weight: 400;
       color: var(--black-color-text-tertiary);
       text-align: justify;
+
+      @media screen and (max-width: 1300px) {
+        font-size: 0.9rem;
+      }
 
       @media screen and (max-width: 768px) {
         font-size: 1rem;
