--- a/frontend/src/containers/About/About.scss
+++ b/frontend/src/containers/About/About.scss
@@ -11,6 +11,10 @@
     width: 90%;
   }
 
+  @media screen and (max-width: 1300px) {
+    padding: 2rem 4rem 4rem 4rem;
+  }
+
   @media screen and (max-width: 1100px) {
     width: 100%;
   }
@@ -56,6 +60,18 @@
         min-height: 550px;
         object-fit: cover;
         border-radius: 10px;
+      }
+
+      @media screen and (max-width: 1300px) {
+        max-height: 450px;
+
+        img {
+          width: 100%;
+          height: 450px;
+          min-height: 350px;
+          object-fit: cover;
+          border-radius: 10px;
+        }
       }
 
       @media screen and (max-width: 940px) {
@@ -106,6 +122,10 @@
           -webkit-text-fill-color: transparent;
           background-clip: text;
           text-fill-color: transparent;
+
+          @media screen and (max-width: 1300px) {
+            font-size: 3rem;
+          }    
 
           @media screen and (max-width: 768px) {
             font-size: 2.5rem;
