--- a/frontend/src/containers/EpisodesSlider/EpisodesSlider.scss
+++ b/frontend/src/containers/EpisodesSlider/EpisodesSlider.scss
@@ -13,8 +13,13 @@
     width: 90%;
   }
 
+  @media screen and (max-width: 2000px) and (max-height: 750px) {
+    margin-top: 18rem;
+  }
+
   @media screen and (max-width: 1300px) {
     margin-top: 16rem;
+    gap: 3rem;
   }
 
   @media screen and (max-width: 1100px) {
@@ -26,7 +31,7 @@
     width: 90%;
     margin-top: 0;
   }
-  
+
   &-title-section {
     display: flex;
     justify-content: space-between;
@@ -38,6 +43,10 @@
       font-size: 4rem;
       line-height: 110%;
       font-weight: 700;
+
+      @media screen and (max-width: 1300px) {
+        font-size: 3rem;
+      }
 
       @media screen and (max-width: 768px) {
         font-size: 2.5rem;
@@ -76,16 +85,26 @@
     }
 
     .slider-item {
-      flex: 0 0 calc(40% - 10px); 
+      flex: 0 0 calc(40% - 10px);
       border-radius: 25px;
       min-height: 600px;
       max-width: 400px;
 
-      @media (max-width: 768px) {
-        flex: 0 0 calc(50% - 20px); 
+      @media screen and (max-width: 1300px) {
+        min-height: 550px;
       }
 
-      @media (max-width: 600px) {
+      @media screen and (max-width: 768px) {
+        flex: 0 0 calc(50% - 20px);
+        min-height: 600px;
+      }
+
+      @media screen and (max-width: 2000px) and (max-height: 700px) {
+        min-height: 550px;
+        height: 550px;
+      }
+
+      @media screen and (max-width: 600px) {
         flex: 0 0 calc(100% - 20px);
       }
     }
