--- a/frontend/src/containers/HomepageCourse/HomepageCourse.scss
+++ b/frontend/src/containers/HomepageCourse/HomepageCourse.scss
@@ -42,6 +42,10 @@
       width: 90%;
     }
 
+    @media screen and (max-width: 1300px) {
+      padding: 2rem 4rem 4rem 4rem;
+    }
+
     @media screen and (max-width: 1100px) {
       width: 100%;
     }
@@ -125,7 +129,7 @@
           padding: 0 2rem;
           background-color: var(--bg-primary);
           @include flex-column-center;
-          justify-content: flex-start;
+          justify-content: center;
           border-radius: 0 0 0 40px;
           text-align: center;
           gap: 1rem;
@@ -223,7 +227,7 @@
         width: 100%;
         border-radius: 40px;
         @include flex-column-center;
-        justify-content: flex-start;
+        justify-content: center;
         text-align: center;
         gap: 1rem;
 
